--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   vertical-align: middle;
   text-decoration: none;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Pacifico', Verdana;
   list-style: none;
 
 }
