--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,7 +38,7 @@ z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 1;
+    z-index: 2;
 
   }
 
@@ -202,6 +202,8 @@ right: 2rem;
 padding: 0.5rem;
 overflow: hidden;
 z-index: 10;
+background: #fff;
+border-radius:4px; 
 }
 
 
@@ -397,7 +399,7 @@ color: black;
 .SocialMedia{width: 100%;
 display: flex;
 }
-#pictures2{margin-top: 20rem;}
+#pictures2{margin-top: 10rem;}
 
 
 
